# util

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
src/myutil/path/: __init__.py  path.py
src/myutil/spreadsheet/: __init__.py  spreadsheet_manager.py
src/myutil/spreadsheet/functions/: type_convert.py
